--- a/themes/zat/layouts/_partials/header.html
+++ b/themes/zat/layouts/_partials/header.html
@@ -1,5 +1,5 @@
 <div class="site-header">
   <div class="container">
-    <a href="/" class="site-logo">ZAT</a>
+    <a href="/" class="site-logo"><span class="bracket">[</span>ZAT<span class="bracket">]</span></a>
   </div>
 </div>
