--- a/themes/zat/layouts/home.html
+++ b/themes/zat/layouts/home.html
@@ -1,10 +1,14 @@
 {{ define "main" }}
   <div class="container">
     {{ range site.RegularPages }}
-      <section class="card">
+      <article class="card card-preview">
+        {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
+        {{ $dateHuman := .Date | time.Format ":date_long" }}
+        <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
         <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-        {{ .Summary }}
-      </section>
+        <div class="card-summary">{{ .Summary }}</div>
+        <a href="{{ .RelPermalink }}" class="read-more">Read more →</a>
+      </article>
     {{ end }}
   </div>
 {{ end }}
