--- a/themes/zat/layouts/_partials/footer.html
+++ b/themes/zat/layouts/_partials/footer.html
@@ -1,1 +1,12 @@
-
+<div class="site-footer">
+  <div class="container">
+    <form
+      action="https://buttondown.com/api/emails/embed-subscribe/zat"
+      method="post"
+      class="embeddable-buttondown-form"
+    >
+      <input type="email" name="email" id="bd-email" placeholder="Join the email list" />
+      <input type="submit" value="Submit" />
+    </form>
+  </div>
+</div>
