--- a/themes/zat/layouts/_partials/footer.html
+++ b/themes/zat/layouts/_partials/footer.html
@@ -1,12 +1,19 @@
 <div class="site-footer">
   <div class="container">
+    <a href="mailto:oldman@zombieapocalypse.tech" class="footer-email">oldman@zombieapocalypse.tech</a>
     <form
-      action="https://buttondown.com/api/emails/embed-subscribe/zat"
+      action="https://tech.us13.list-manage.com/subscribe/post?u=4c2e196117cdb095809f3bb3b&amp;id=f31692b207&amp;f_id=00de34e5f0"
       method="post"
       class="embeddable-buttondown-form"
+      target="_self"
+      novalidate
     >
-      <input type="email" name="email" id="bd-email" placeholder="Join the email list" />
+      <input type="email" name="EMAIL" id="mce-EMAIL" placeholder="Join the email list" required />
       <input type="submit" value="Confirm" />
+      <div aria-hidden="true" style="position: absolute; left: -5000px;">
+        <input type="text" name="b_4c2e196117cdb095809f3bb3b_f31692b207" tabindex="-1" value="" />
+      </div>
     </form>
+    <div class="footer-controls"></div>
   </div>
 </div>
