--- a/themes/zat/layouts/home.html
+++ b/themes/zat/layouts/home.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ range site.RegularPages }}
+  {{ range where site.RegularPages "Section" "ne" "glossary" }}
     <article class="card card-preview">
       {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
       {{ $dateHuman := .Date | time.Format ":date_long" }}
