--- a/public/css/main.css
+++ b/public/css/main.css
@@ -148,7 +148,7 @@
   --zac-accent-brighter: #a0a0a0;
   --zac-accent-dim: rgba(102, 102, 102, 0.5);
   --zac-accent-glow: rgba(102, 102, 102, 0.35);
-  --zac-text-tinted: #d0d0d0;
+  --zac-text-tinted: #efefefef;
 }
 
 /* Purple */
