--- a/themes/zat/layouts/_partials/terms.html
+++ b/themes/zat/layouts/_partials/terms.html
@@ -13,7 +13,7 @@ For a given taxonomy, renders a list of terms assigned to the page.
 {{- with $page.GetTerms $taxonomy }}
   {{- $label := (index . 0).Parent.LinkTitle }}
   <div class="terms">
-    <div class="terms-label">{{ $label }}:</div>
+    <div class="terms-label">TAGS:</div>
     <ul class="terms-list">
       {{- range . }}
         <li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
