--- a/themes/zat/layouts/home.html
+++ b/themes/zat/layouts/home.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
-  {{ range where site.RegularPages "Section" "ne" "glossary" }}
+  {{ range where (where site.RegularPages "Section" "ne" "glossary") "Section" "ne" "journal" }}
     <article class="card card-preview">
       {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
       {{ $dateHuman := .Date | time.Format ":date_long" }}
       <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
       <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-      <div class="card-summary">{{ .Summary }}</div>
+      {{ with .Params.overview }}<div class="card-summary">{{ . }}</div>{{ end }}
       <a href="{{ .RelPermalink }}" class="read-more">Read more →</a>
     </article>
   {{ end }}
